data/derived/fa15/progs/unify/prog1922.ml.out
Characters 359-372:
  let args = List.combine((List.rev l1) (List.rev l2)) in  
                          ^^^^^^^^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
